--- a/app/styles/components/hero-image.scss
+++ b/app/styles/components/hero-image.scss
@@ -60,3 +60,12 @@
     }
   }
 }
+
+@media (max-width : $screen-sm-min) {
+  .hero-image {
+    header h1 {
+      font-size: 3em;
+      margin: 30px 0 0 0;
+    }
+  }
+}
