--- a/app/styles/pages/about.scss
+++ b/app/styles/pages/about.scss
@@ -21,7 +21,7 @@
 
       li {
         background: #212D39;
-        color: #FFF;
+        color: white;
         font-size: 2em;
         font-family: AvenirMedium;
         font-style: oblique;
@@ -33,30 +33,30 @@
     }
   }
 
-  article {
-    aside {
-      width: 30%;
-      right: 0;
-      position: absolute;
-      padding-left: 30px;
-
-      &.quote .inner {
-        font-family: MyriadPro;
-        font-weight: bold;
-        font-size: 1.4em;
-        border: 5px solid #333;
-        border-width: 5px 0;
-        line-height: 1;
-        padding: 8px 0;
-      }
+  article aside {
+    .inner {
+      font-family: MyriadPro;
+      font-weight: bold;
+      font-size: 1.4em;
+      border: 5px solid #333;
+      border-width: 5px 0;
+      line-height: 1;
+      padding: 8px 0;
     }
   }
 }
 
 @media (max-width : $screen-sm-min) {
   #about {
-    .hero-image header h1 {
-      font-size: 3em;
+
+    article aside {
+      margin: 30px 0;
+
+      .inner {
+        font-size: 1.8em;
+        border-width: 0 0 0 5px;
+        padding: 0 0 0 20px;
+      }
     }
   }
 }
