--- a/app/styles/pages/project.scss
+++ b/app/styles/pages/project.scss
@@ -20,33 +20,6 @@
     }
   }
 
-  .side-column {
-    position: absolute;
-    right: 150px;
-    top: 130px;
-    width: 120px;
-    border: 1px solid #333;
-    border-width: 4px 0 4px 0;
-    padding: 15px 0;
-
-    h4 {
-      color: $text-light-color;
-      font-size: 1em;
-      font-weight: bold;
-      margin-bottom: 0;
-
-      &:first-child {
-        margin: 0;
-      }
-    }
-
-    p {
-      font-size: 1em;
-      font-family: $headings-font-family;
-      margin: 0;
-    }
-  }
-
   article {
     li {
       font-family: $paragraph-font-family;
@@ -62,7 +35,7 @@
     }
 
     .date {
-      color: #666;
+      color: $gray-light;
       margin-bottom: 20px;
     }
 
@@ -73,11 +46,6 @@
       border: 1px solid #EEE;
       margin-bottom: 10px;
       padding: 3px;
-    }
-
-    .image-caption {
-      margin-bottom: 20px;
-      color: #999;
     }
 
     .raw {
@@ -101,6 +69,18 @@
       color: #999;
       text-align: right;
       margin-top: 15px;
+    }
+
+    aside {
+      .inner {
+        border-top: 5px solid $gray-light;
+        font-family: MyriadPro;
+        font-style: italic;
+        font-size: 1.2em;
+        color: $gray-light;
+        line-height: 1;
+        padding-top: 8px;
+      }
     }
   }
 
@@ -135,27 +115,14 @@
   }
 }
 
-@media (min-width : $screen-sm-min) and (max-width : $screen-lg-min) {
-  #project {
-    .side-column {
-      right: 20px;
-      top: 130px;
-      width: 100px;
-    }
-  }
-}
-
 @media (max-width : $screen-sm-min) {
   #project {
-    .side-column {
-      position: relative;
-      right: auto;
-      top: auto;
-      width: auto;
-      border: 1px solid #333;
-      border-width: 4px 0 4px 0;
-      padding: 15px 0;
-      margin: 30px 0;
+    article aside {
+      margin: 0 0 20px 0;
+
+      .inner {
+        border: 0;
+      }
     }
   }
 }
