--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -4,6 +4,7 @@ $primary-blue-dark: #154359;
 $text-normal-color: #333;
 $text-light-color: #CCC;
 $purple: #515174;
+$gray-light: #666;
 
 $font-family-base: ArnoPro;
 $headings-font-weight: bold;
